Fixed alignment for fullscreen, changes class names.

--- a/styles.css
+++ b/styles.css
@@ -6,46 +6,67 @@ body {
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   color: white;
+  margin-left: 400px;
+  margin-right: 400px;
+  margin-top: 20px;
 }
 
 .logo {
   font-size: 24px;
-  padding-right: 150px;
+  color: #f9faf8;
+  font-weight: bold;
 }
 
 .links {
   gap: 25px;
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  color: #afb0b4;
 }
 
 ul {
   list-style-type: none;
 }
 
-.image1 {
-  width: 400px;
-  height: 200px;
-}
-
 .topcontainer {
-  color: white;
   display: flex;
-  padding-top: 80px;
-  padding-left: 180px;
-  display: flex;
+  margin-left: 400px;
+  margin-right: 400px;
+  padding-top: 100px;
 }
 
-.topheader {
-  font-size: 48px;
-  font-weight: bolder;
-}
-
-.info .subtext {
-  max-width: 500px;
-  padding-top: 15px;
+.image1 {
+  width: 650px;
+  height: 270px;
 }
 
 .info {
-  padding-right: 50px;
+}
+
+.info .subtext {
+  color: #e5e7eb;
+  font-size: 18px;
+  max-width: 450px;
+  padding-bottom: 20px;
+}
+
+.toptext {
+  color: #f9faf8;
+  font-size: 48px;
+  font-weight: bolder;
+  padding-bottom: 0px;
+}
+
+.button {
+  border-radius: 8px;
+  background-color: #3882f6;
+  color: white;
+  width: 115px;
+  height: 35px;
+  border: none;
+  font-weight: bolder;
+  font-size: 16px;
 }
